[gd_scene load_steps=16 format=3 uid="uid://c2ic5tgj2bfh7"]

[ext_resource type="Script" path="res://scripts/pause_menu.gd" id="1_k83qr"]
[ext_resource type="Shader" path="res://scenes/pause_menu.gdshader" id="1_w234w"]
[ext_resource type="Theme" uid="uid://bn5331o8qs7n2" path="res://assets/default_theme.tres" id="1_whuj7"]
[ext_resource type="FontFile" uid="uid://qygpt0v2rttw" path="res://assets/UI/BodoniModa_9pt-Black.ttf" id="5_1k0kn"]
[ext_resource type="Shader" path="res://scenes/menu.gdshader" id="5_5y2vt"]
[ext_resource type="PackedScene" uid="uid://c6ut4t3fm3vim" path="res://scenes/floating_particles.tscn" id="6_6o5xq"]
[ext_resource type="PackedScene" uid="uid://c4q3vs7aunrx2" path="res://scenes/rain.tscn" id="7_otagi"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_rvgwa"]
shader = ExtResource("1_w234w")
shader_parameter/lod = 0.0

[sub_resource type="Animation" id="Animation_p6d6k"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:material:shader_parameter/lod")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PanelContainer:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_ndv5y"]
resource_name = "blur"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:material:shader_parameter/lod")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 1.63]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PanelContainer:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_iyt52"]
resource_name = "fade_out"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PanelContainer:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_dmtd8"]
_data = {
"RESET": SubResource("Animation_p6d6k"),
"blur": SubResource("Animation_ndv5y"),
"fade_out": SubResource("Animation_iyt52")
}

[sub_resource type="ShaderMaterial" id="ShaderMaterial_dmbnw"]
shader = ExtResource("5_5y2vt")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_32m7y"]
texture_margin_top = 0.179859
region_rect = Rect2(0, 55, 57, 25)

[sub_resource type="CanvasTexture" id="CanvasTexture_lnur1"]

[node name="pauseMenu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 15.0
offset_bottom = -17.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 4
script = ExtResource("1_k83qr")

[node name="ColorRect" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_rvgwa")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -36.0
offset_bottom = 45.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = -0.0162811
anchor_top = -0.0158479
anchor_right = 1.03856
anchor_bottom = 1.19017
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_whuj7")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_dmtd8")
}

[node name="Menu" type="Button" parent="."]
material = SubResource("ShaderMaterial_dmbnw")
layout_mode = 2
offset_left = 470.0
offset_top = 408.0
offset_right = 663.0
offset_bottom = 485.18
theme = ExtResource("1_whuj7")
theme_override_fonts/font = ExtResource("5_1k0kn")
theme_override_font_sizes/font_size = 50
theme_override_styles/normal = SubResource("StyleBoxTexture_32m7y")
text = "Menu"
icon = SubResource("CanvasTexture_lnur1")

[node name="Resume" type="Button" parent="."]
layout_mode = 2
offset_left = 448.0
offset_top = 225.0
offset_right = 701.0
offset_bottom = 309.0
theme_override_constants/outline_size = 0
theme_override_constants/h_separation = 1
theme_override_fonts/font = ExtResource("5_1k0kn")
theme_override_font_sizes/font_size = 50
theme_override_styles/normal = SubResource("StyleBoxTexture_32m7y")
text = " Resume"

[node name="Options" type="Button" parent="."]
layout_mode = 2
offset_left = 451.0
offset_top = 311.0
offset_right = 696.0
offset_bottom = 391.0
theme_override_fonts/font = ExtResource("5_1k0kn")
theme_override_font_sizes/font_size = 50
theme_override_styles/normal = SubResource("StyleBoxTexture_32m7y")
text = " Options"

[node name="Timer" type="Timer" parent="."]

[node name="floatingParticles" parent="." instance=ExtResource("6_6o5xq")]
position = Vector2(466, 392)

[node name="rain" parent="." instance=ExtResource("7_otagi")]
position = Vector2(640, 617)

[connection signal="pressed" from="Menu" to="." method="_on_menu_pressed"]
[connection signal="pressed" from="Resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="Options" to="." method="_on_options_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
